<resources>
    <string name="app_name">DailyCost</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="content_des_setting">setting</string>
    <string name="content_des_statistics">statistics</string>
    <string name="content_des_close">close</string>
    <string name="toast_add_record_fail">Billing failed, please try again</string>
    <string name="toast_modify_record_fail">Failed to modify record</string>
    <string name="toast_sort_fail">Failed to sort</string>
    <string name="toast_least_one_type">Please keep at least one type</string>
    <string name="toast_delete_fail">failed to delete</string>
    <string name="toast_type_img_fail">Failed to get type picture</string>
    <string name="toast_type_save_fail">Failed to save the type</string>
    <string name="toast_type_is_exist">&#160;The type already exists</string>
    <string name="toast_record_delete_fail">Failed to delete record</string>
    <string name="toast_current_sum_money_fail">Failed to obtain the total amount of expenditure income this month</string>
    <string name="toast_records_fail">Failed to get list data</string>
    <string name="toast_init_types_fail">Failed to initialize type data</string>
    <string name="toast_get_types_fail">Failed to get type data</string>
    <string name="toast_get_statistics_fail">Failed to get statistics</string>
    <string name="toast_get_month_summary_fail">Failed to get summary data for the month</string>
    <string name="toast_get_type_summary_fail">Failed to get type summary data</string>
    <string name="toast_not_install_market">Your phone does not have an Android app market installed</string>
    <string name="toast_not_install_alipay">Thank you, you did not install Alipay application</string>
    <string name="toast_is_not_writable_external">Backup failed, external storage is unavailable</string>
    <string name="toast_restore_fail">Failed to restore the backup</string>
    <string name="toast_backup_list_fail">Failed to get backup file list</string>
    <string name="toast_backup_success">Backup was successful</string>
    <string name="toast_backup_fail">Backup failed</string>
    <string name="toast_open_auto_backup">Automatic backup is turned off. You can go to settings to reopen</string>
    <string name="hint_enter_money">Enter the amount</string>
    <string name="hint_enter_remark">Enter a note</string>
    <string name="hint_enter_type_name">Please enter the type name</string>
    <string name="text_affirm">OK</string>
    <string name="text_symbol_outlay">-</string>
    <string name="text_symbol_income">+</string>
    <string name="text_home_footer_tip">Statistics page can view previous month records</string>
    <string name="text_add_record">Record</string>
    <string name="text_modify_record">Modify</string>
    <string name="text_done">Done</string>
    <string name="text_title_drag_sort">Long press item to sort</string>
    <string name="text_title_type_manage">Management</string>
    <string name="text_button_sort">Sort</string>
    <string name="text_outlay">Pay</string>
    <string name="text_income">Earn</string>
    <string name="text_setting">setting</string>
    <string name="text_title_setting">Setting</string>
    <string name="text_month_outlay">Pay($)</string>
    <string name="text_month_income">Earn($)</string>
    <string name="text_today">today</string>
    <string name="text_yesterday">yesterday</string>
    <string name="text_type_eat">food</string>
    <string name="text_type_clothes">clothes</string>
    <string name="text_type_humanity">gift</string>
    <string name="text_type_candy">snacks</string>
    <string name="text_type_3c">3c</string>
    <string name="text_type_pet">pet</string>
    <string name="text_type_pill">pill</string>
    <string name="text_type_calendar">necessary</string>
    <string name="text_type_pluralism">pluralism</string>
    <string name="text_type_salary">salary</string>
    <string name="text_current_month_empty_tip">No bookkeeping started this month\n\nClick the button to start bookkeeping</string>
    <string name="text_month_empty_tip">Every bill is a bit of life</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_know">i see</string>
    <string name="text_button_affirm_delete">delete</string>
    <string name="text_dialog_delete">delete</string>
    <string name="text_delete_type_note">After you delete this category, you will not be able to select this category on the bookkeeping page. The original bills under this category will remain unchanged.</string>
    <string name="text_save">Save</string>
    <string name="text_add">Add</string>
    <string name="text_modify">Modify</string>
    <string name="text_outlay_type">Type of pay</string>
    <string name="text_income_type">Type of earn</string>
    <string name="text_delete">delete</string>
    <string name="text_tip_type_delete">The type of record has been deleted and the first type has been selected by default</string>
    <string name="text_order">Bill</string>
    <string name="text_reports">Reports</string>
    <string name="text_money_symbol">$</string>
    <string name="text_month_outlay_symbol">Pay&#160;$</string>
    <string name="text_month_income_symbol">Earn&#160;$</string>
    <string name="text_unit_account"></string>
    <string name="text_day">&#160;</string>
    <string name="text_choose_month">Select month</string>
    <string name="text_sort_time">By time</string>
    <string name="text_sort_money">By amount</string>
    <string name="text_title_open_source">License</string>
    <string name="text_title_about">About</string>
    <string name="text_backup">Back up now</string>
    <string name="text_backup_save">Backup file will be saved to/sdcard/backup_dailycost/DailyCostBackupUser.db</string>
    <string name="text_setting_money">Bookkeeping</string>
    <string name="text_setting_type_manage">type management</string>
    <string name="text_setting_backup">Backup</string>
    <string name="text_go_backup">Back up now</string>
    <string name="text_setting_restore">Restore</string>
    <string name="text_setting_about_and_help">About|Help</string>
    <string name="text_about">About</string>
    <string name="text_setting_score">Score</string>
    <string name="text_setting_donate">Donate</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_setting_lisence">Open source license</string>
    <string name="text_setting_help">Help</string>
    <string name="text_setting_good_score">Give a good score,please</string>
    <string name="text_about_content">Understand our design philosophy</string>
    <string name="text_setting_auto_backup">Automatic backup</string>
    <string name="text_setting_go_backup_content">Backup file will be saved to/sdcard/backup_dailycost</string>
    <string name="text_setting_restore_content">Backup files will read from/sdcard/backup_dailycost</string>
    <string name="text_setting_auto_backup_content">Data change automatic backup (recommended to open)</string>
    <string name="text_restore">Restore</string>
    <string name="text_list_restore">The following is the backup file, click restore:</string>
    <string name="text_restore_tip">The backup file name with Auto word indicates automatic backup. With User indication, click the Backup Now button to manually back up, and before restoration, save a copy of the data before restoration.</string>
    <string name="text_before_reverting">_BeforeReverting</string>
    <string name="text_storage">Storage permissions</string>
    <string name="text_storage_content">In order to back up your accounting data automatically, you need to open the storage permission.</string>
    <string name="text_open_permissions">Permissions</string>
    <string name="text_storage_permission_tip">Backup related operations require storage permissions to set open permissions</string>
    <string name="text_close_auto_backup">Turn off automatic backup</string>
    <string name="text_close_auto_backup_tip">After the automatic backup is turned off, you need to manually click 「Back up now」 to back up the data and you may lose some of the latest data.</string>
    <string name="text_tip_backup_fail">Auto backup failed</string>
    <string name="text_share">Share</string>
    <string name="text_more">More</string>
    <string name="text_dev_designer">Developer &amp; Designer</string>
    <string name="text_designer">Designer</string>
    <string name="text_developer_designer">Developer &amp; Designer</string>
    <string name="text_icon_launcher">Want a designer to design an application launch icon</string>
    <string name="text_share_to">Share to</string>
    <string name="text_app_slogan">Simple, pure accounting application</string>
    <string name="facebook_application_id" translatable="false">584173995540366</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb584173995540366</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="launch_title">FirebaseUI Auth</string>
    <string name="sign_in_start">Start</string>
    <string name="sign_in_silent">Sign in silently</string>
    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_facebook">Facebook</string>
    <string name="providers_twitter">Twitter</string>
    <string name="providers_email">Email</string>
    <string name="providers_email_link">Email link</string>
    <string name="providers_phone">Phone</string>
    <string name="providers_anonymous">Anonymous</string>
    <string name="providers_apple">Apple</string>
    <string name="providers_microsoft">Microsoft</string>
    <string name="providers_yahoo">Yahoo</string>
    <string name="providers_github">GitHub</string>
    <string name="layout_header">Layout</string>
    <string name="layout_default">Default</string>
    <string name="layout_custom">Custom</string>
    <string name="theme_header">Theme</string>
    <string name="theme_default">Default theme</string>
    <string name="theme_purple">Purple Theme</string>
    <string name="theme_green">Green Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="logo_header">Logo</string>
    <string name="logo_firebase">Firebase Auth</string>
    <string name="logo_google">Google</string>
    <string name="logo_none">None</string>
    <string name="tos_pp_header">Terms of Service and Privacy Policy</string>
    <string name="tos_pp_google">Google</string>
    <string name="tos_pp_firebase">Firebase</string>
    <string name="tos_pp_none">None</string>
    <string name="options_header">Other Options</string>
    <string name="options_enable_credential_selector">Enable Smart Lock\'s credential selector</string>
    <string name="options_enable_hint_selector">Enable Smart Lock\'s hint selector</string>
    <string name="options_allow_new_email_acccount">Allow new account creation</string>
    <string name="options_require_name">Require first/last name with email accounts.</string>
</resources>