<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".ui.login.FirebaseUIActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableTop="@drawable/ic_googleg_color_144dp"
                android:textColor="@color/colorTextWhite1"
                android:text="@string/start_sign_in" />

            <Button
                android:id="@+id/sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in_start" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextWhite1"
                android:layout_marginBottom="8dp"

                android:text="@string/providers_header" />

            <CheckBox
                android:id="@+id/google_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/providers_google" />

            <CheckBox
                android:id="@+id/facebook_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/providers_facebook" />

            <CheckBox
                android:id="@+id/email_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/providers_email" />

            <CheckBox
                android:id="@+id/anonymous_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/providers_anonymous" />

            <TextView
                android:id="@+id/google_tos_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorTextWhite1"
                android:text="@string/options_header" />

            <CheckBox
                android:id="@+id/credential_selector_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/options_enable_credential_selector" />

            <CheckBox
                android:id="@+id/hint_selector_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/options_enable_hint_selector" />

            <CheckBox
                android:id="@+id/allow_new_email_accounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/options_allow_new_email_acccount" />

            <CheckBox
                android:id="@+id/require_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorTextWhite2"
                android:text="@string/options_require_name" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
